--- a/Exercise 3/simpson_integration.ipynb
+++ b/Exercise 3/simpson_integration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "array([2, 4, 6, 8])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,23 +61,40 @@
     "#  int: value of the integral\n",
     "def compositeSimpson(f, a, b, m):\n",
     "    # INSERT CODE HERE\n",
-    "    integral = \n",
-    "    return integral"
+    "    h = (b-a) / m\n",
+    "    x = np.linspace(a, b, m+1)\n",
+    "    return (h / 3) * (f(x[0]) + 4 * np.sum(f(x[1:m:2])) + 2 * np.sum(f(x[2:m-1:2])) + f(x[m]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6321205588285577\n",
+      "0.6321209095890152\n",
+      "0.17616074510474355\n",
+      "-0.00021312117510496886\n"
+     ]
+    }
+   ],
    "source": [
     "# Exact integral value\n",
-    "I_exact = # ... COMPLETE WITH THE VALUE OF THE EXACT INTEGRAL"
+    "I_exact = (np.e - 1) / np.e \n",
+    "print(I_exact)\n",
+    "print(compositeSimpson(f, a, b, 10))\n",
+    "\n",
+    "print(I_exact - compositeSimpson(f, a, b, 1))\n",
+    "print(I_exact - compositeSimpson(f, a, b, 2))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +102,7 @@
      "output_type": "stream",
      "text": [
       "Subintervals:  [2 4 6 8]\n",
-      "Errors:  [0.00021312117510496886, 1.361649197462178e-05, 2.700772859465239e-06, 8.55776184471857e-07]\n"
+      "Errors:  [0.00021312117510496886, 1.361649197462178e-05, 2.700772859354217e-06, 8.557761845828793e-07]\n"
      ]
     }
    ],
@@ -98,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3.9682469683548565, 3.989846955083258, 3.9949808838244567]"
+       "[3.9682469683548565, 3.989846955184642, 3.994980883230605]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
