--- a/Exercise 4/bisectionmethod.ipynb
+++ b/Exercise 4/bisectionmethod.ipynb
@@ -163,8 +163,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "431424df",
+   "metadata": {},
+   "source": [
+    "### Kode fra oppgave 2b)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "75d6015e",
    "metadata": {},
    "outputs": [
@@ -172,11 +180,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12.287712379549449\n"
+      "0.07298164543160722\n",
+      "0.01646129230512068\n",
+      "0.0036534347705024645\n",
+      "0.0008067806497155522\n",
+      "0.00017795000341036538\n",
+      "3.9239752796016436e-05\n",
+      "8.652253972202262e-06\n",
+      "1.9077729236510743e-06\n",
+      "4.206519177568646e-07\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import numpy as np \n",
+    "def g(x):\n",
+    "    return np.cos(np.exp(-x))**2/4 \n",
+    "x = 0\n",
+    "x_old = 1\n",
+    "while np.abs(x_old-x) > 1e-6:\n",
+    "    x_old = x\n",
+    "    x = g(x)\n",
+    "    print(x-x_old)"
+   ]
   }
  ],
  "metadata": {
