--- a/Exercise 4/newtonmethod.ipynb
+++ b/Exercise 4/newtonmethod.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "85685557-23a0-49e5-9cdf-6aaa9a722ff0",
    "metadata": {
     "tags": []
@@ -60,11 +60,12 @@
     "    for k in range(max_iter):\n",
     "        fx = f(x)\n",
     "        # TO COMPLETE\n",
-    "\n",
+    "        dfx = df(x)\n",
     "        # check if the tolerance criteria is satisfied\n",
-    "        \n",
+    "        if np.abs(fx) < tol:\n",
+    "            break\n",
     "        # update the value of x\n",
-    "\n",
+    "        x = x - fx/dfx\n",
     "        verbose and print('k ={:3d}, x = {:18.15f}, f(x) = {:10.3e}'.format(k+1, x, f(x)))\n",
     "    return x, k+1"
    ]
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ac1b5907-cfc4-4046-859a-5e6c8a23aa05",
    "metadata": {},
    "outputs": [],
@@ -87,10 +88,10 @@
     "import numpy as np\n",
     "\n",
     "def f(x):\n",
-    "    return # insert here the function\n",
+    "    return np.cos(x) - np.sqrt(x)\n",
     "\n",
     "def df(x):\n",
-    "    return # insert here the funciton derivative\n"
+    "    return -np.sin(x)-1/(2*np.sqrt(x))\n"
    ]
   },
   {
@@ -103,10 +104,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8fc933b1-2d99-410a-8cfe-82c13794f28a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k =  0, x =  1.000000000000000, f(x) = -4.597e-01\n",
+      "k =  1, x =  0.657318198203377, f(x) = -1.912e-02\n",
+      "k =  2, x =  0.641746105250497, f(x) = -3.880e-05\n",
+      "\n",
+      " The solution: 0.6417 has been achieved in: 3  iterations\n"
+     ]
+    }
+   ],
    "source": [
     "sol, iter = newton(f,df,x0=1,tol=1.e-3)\n",
     "\n",
@@ -130,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
